tests/ui/fail/invariant_on_struct.stderr
error: the #[invariant] attribute only works on functions and impl blocks
 --> tests/ui/fail/invariant_on_struct.rs:4:1
  |
4 | / struct Positive {
5 | |     value: i32,
6 | | }
  | |_^
